IdentityUser => Employee , for getting employe data in employee list , employee details. means which employee have how many leaves. etc...

--- a/LeaveManageAPP/Views/LeaveTypes/Index.cshtml
+++ b/LeaveManageAPP/Views/LeaveTypes/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<LeaveManageAPP.Repository.LeaveTypeVM>
+﻿@model IEnumerable<LeaveManageAPP.Models.LeaveTypeVM>
 
 @{
     ViewData["Title"] = "Index";
@@ -26,7 +26,7 @@
         Create New
     </a>
 </p>
-<table id="tblData"  class="table table-striped table-bordered" style="width:100%">
+<table id="tblData"  Lclass="table table-striped table-bordered" style="width:100%">
     <thead>
     <tr>
         <th>
