--- a/LeaveManageAPP/Views/LeaveTypes/Index.cshtml
+++ b/LeaveManageAPP/Views/LeaveTypes/Index.cshtml
@@ -13,7 +13,7 @@
 <h1 class="MyColor"
     data-toggle="tooltip"
     data-html="true"
-    title="This Page is about Leave Types">Leave Types
+    title="This Page is about Leave Types">List of Leave Types
 </h1>
 
 <p>
@@ -60,7 +60,7 @@
                 </a>
                 <a 
                     asp-action="Details" 
-                    class="btn btn-info" 
+                    class="btn btn-info mr-auto" 
                     asp-route-id="@item.Id"
                     data-toggle="tooltip"
                     data-html="true"
