--- a/LeaveManageAPP/Views/Home/Index.cshtml
+++ b/LeaveManageAPP/Views/Home/Index.cshtml
@@ -2,41 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-
-
-<header>
-    <div class="carousel slide" data-ride="carousel" id="carouselExampleIndicators">
-        <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active">
-                <img class="w-100 d-block" src="https://source.unsplash.com/LAaSoL0LrYs/1920x1080" alt="Slide Image">
-                <div class="carousel-caption d-none d-md-block">
-                    <h1 id="Heading" class="display-4">Welcome Bro..!!<br></h1>
-                    <p class="lead">This is a description for the first slide.<br></p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img class="w-100 d-block" style="background-image:url(&quot;https://source.unsplash.com/bF2vsubyHcQ/1920x1080&quot;);" src="https://source.unsplash.com/bF2vsubyHcQ/1920x1080" alt="Slide Image">
-                <div class="carousel-caption d-none d-md-block">
-                    <h1 class="display-4">Second Slide<br></h1>
-                    <p class="lead">This is a description for the second slide.<br></p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img class="w-100 d-block" src="https://source.unsplash.com/szFUQoyvrxM/1920x1080" alt="Slide Image">
-                <div class="carousel-caption d-none d-md-block">
-                    <h1 class="display-4">Third Slide<br></h1>
-                    <p class="lead">This is a description for the third slide.<br></p>
-                </div>
-            </div>
-        </div>
-        <div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev"><span class="carousel-control-prev-icon"></span><span class="sr-only">Previous</span></a><a class="carousel-control-next" href="#carouselExampleIndicators"
-                                                                                                                                                                                                           role="button" data-slide="next"><span class="carousel-control-next-icon"></span><span class="sr-only">Next</span></a>
-        </div>
-        <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-    </div>
-</header>
+<div class="text-center">
+    <h1 class="display-4">Welcome</h1>
+    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+</div>
