--- a/LeaveManageAPP/Views/LeaveAllocation/ListEmployees.cshtml
+++ b/LeaveManageAPP/Views/LeaveAllocation/ListEmployees.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>List Employees</h1>
+<h1>List of Employees</h1>
 
 <table id="tblData" class="table">
     <thead>
