--- a/LeaveManageAPP/Views/LeaveTypes/Create.cshtml
+++ b/LeaveManageAPP/Views/LeaveTypes/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
+<h1>Create New Leave</h1>
 
 <hr />
 <div class="row">
@@ -32,7 +32,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-outline-secondary btn-block">Back to List</a>
 </div>
 
 @section Scripts {
