Added Leaverequest module for employee and User. and implemented the functionality to cancel the requests and user can review their own leaves.

--- a/LeaveManageAPP/Views/LeaveRequest/Details.cshtml
+++ b/LeaveManageAPP/Views/LeaveRequest/Details.cshtml
@@ -4,9 +4,45 @@
     ViewData["Title"] = "Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h1>Review @Model.RequestingEmployee.Firstname @Model.RequestingEmployee.Lastname 's Request</h1>
-<h4>@Html.DisplayNameFor(model => model.DateRequested) - @Html.DisplayFor(model => model.DateRequested) </h4>
+@if (Model.Approved == null)
+{
+    <div class="alert alert-warning" role="alert">
+        <h4 class="alert-heading">Pending Approval</h4>
+        <p>
+            <strong>@Html.DisplayNameFor(model => model.RequestingEmployeeId):</strong>  @Model.RequestingEmployee.Firstname @Model.RequestingEmployee.Lastname 's Leave Request <br />
+        </p>
+        <hr/>
+        <p>
+            @Html.DisplayNameFor(model => model.DateRequested) - @Html.DisplayFor(model => model.DateRequested)
+        </p>
+    </div>
+}
+else if (Model.Approved == true)
+{
+    <div class="alert alert-success" role="alert">
+        <h4 class="alert-heading">Approved by : @Model.ApprovedBy.Firstname @Model.ApprovedBy.Lastname</h4>
+        <p>
+            <strong>@Html.DisplayNameFor(model => model.RequestingEmployeeId):</strong> @Model.RequestingEmployee.Firstname @Model.RequestingEmployee.Lastname  <br />
+        </p>
+        <hr />
+        <p>
+            @Html.DisplayNameFor(model => model.DateRequested) - @Html.DisplayFor(model => model.DateRequested)
+        </p>
+    </div>
+}
+else
+{
+    <div class="alert alert-danger" role="alert">
+        <h4 class="alert-heading">Rejected by : @Model.ApprovedBy.Firstname @Model.ApprovedBy.Lastname</h4>
+        <p>
+            <strong>@Html.DisplayNameFor(model => model.RequestingEmployeeId):</strong> @Model.RequestingEmployee.Firstname @Model.RequestingEmployee.Lastname <br />
+        </p>
+        <hr />
+        <p>
+            @Html.DisplayNameFor(model => model.DateRequested) - @Html.DisplayFor(model => model.DateRequested)
+        </p>
+    </div>
+}
 <div>
     <hr />
     <dl class="row">
@@ -39,14 +75,13 @@
     </dl>
 </div>
 <div>
-    <a class="btn btn-outline-success" asp-action="ApproveRequest" asp-route-id="@Model.Id">
-        <i class="fa fa-check"></i> Approve Request 
-    </a> 
-    <a class="btn btn-outline-danger" asp-action="RejectRequest" asp-route-id="@Model.Id">
-        <i class="fa fa-trash"></i> Reject Request
-
-
-    </a>
-
+    @if (Model.Approved == null)
+    {
+        <a class="btn btn-outline-success" asp-action="ApproveRequest" asp-route-id="@Model.Id">
+            <i class="fa fa-check"></i> Approve Request 
+        </a> 
+        <a class="btn btn-outline-danger" asp-action="RejectRequest" asp-route-id="@Model.Id">
+            <i class="fa fa-trash"></i> Reject Request</a>
+    }
     <a class="btn btn-outline-secondary btn-block mt-5" asp-action="Index">Back to List</a>
 </div>
