--- a/LeaveManageAPP/Views/LeaveRequest/Create.cshtml
+++ b/LeaveManageAPP/Views/LeaveRequest/Create.cshtml
@@ -34,11 +34,11 @@
                 </div>
             </div>
 
-    @*<div class="form-group">
+            <div class="form-group">
                 <label asp-for="RequestComments" class="control-label"></label>
                 <textarea asp-for="RequestComments" class="form-control"></textarea>
                 <span asp-validation-for="RequestComments" class="text-danger"></span>
-            </div>*@
+            </div>
 
 
 
