--- a/LeaveManageAPP/Views/Shared/_Layout.cshtml
+++ b/LeaveManageAPP/Views/Shared/_Layout.cshtml
@@ -34,6 +34,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="LeaveRequest" asp-action="Create">Apply For Leave</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="LeaveRequest" asp-action="MyLeave">MyLeave</a>
+                        </li>
+
 
                         @if (SignInManager.IsSignedIn(User))
                         {
@@ -47,7 +51,7 @@
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                         <a class="dropdown-item text-dark" asp-controller="LeaveTypes" asp-action="Index">Leave Types</a>
                                         <a class="dropdown-item text-dark" asp-controller="LeaveAllocation" asp-action="Index">Leave Allocations</a>
-                                        <a class="dropdown-item text-dark" asp-controller="LeaveRequest" asp-action="Index">Leave Applications</a>
+                                        <a class="dropdown-item text-dark" asp-controller="LeaveRequest" asp-action="Index">Leave Requests</a>
                                         <a class="dropdown-item text-dark" asp-controller="LeaveAllocation" asp-action="ListEmployees">Employees</a>
                                     </div>
                                 </li>
