Implemented Admin LTE and required Files to it

--- a/LeaveManageAPP/Views/LeaveAllocation/Edit.cshtml
+++ b/LeaveManageAPP/Views/LeaveAllocation/Edit.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Edit";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_AdminLTE.cshtml";
 }
 
 <h1>Editing at @Model.LeaveType.Name Allocation for @Model.Employee.Firstname -  @Model.Employee.Lastname</h1>
