--- a/LeaveManageAPP/Views/LeaveAllocation/Details.cshtml
+++ b/LeaveManageAPP/Views/LeaveAllocation/Details.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Details";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_AdminLTE.cshtml";
 }
 
 <h1>Details for @Model.Employee.Firstname @Model.Employee.Lastname</h1>
