--- a/LeaveManageAPP/Views/LeaveAllocation/Index.cshtml
+++ b/LeaveManageAPP/Views/LeaveAllocation/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_AdminLTE.cshtml";
 }
 
 <h1>Index</h1>
@@ -25,7 +25,7 @@
 
                 <td>
                     <a class="btn btn-outline-success" asp-action="SetLeave" asp-route-id="@item.Id">
-                        <i class="fa fa-pencil"></i>Allocate to Employee
+                        <i class="fas fa-pencil-alt"></i> Allocate to Employee
                     </a>
                 </td>
             </tr>
