--- a/LeaveManageAPP/Views/LeaveAllocation/ListEmployees.cshtml
+++ b/LeaveManageAPP/Views/LeaveAllocation/ListEmployees.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "ListEmployees";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_AdminLTE.cshtml";
 }
 
 <h1>List of Employees</h1>
