--- a/LeaveManageAPP/Views/LeaveTypes/Create.cshtml
+++ b/LeaveManageAPP/Views/LeaveTypes/Create.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Create";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_AdminLTE.cshtml";
 }
 
 <h1>Create New Leave</h1>
